# automotive-software-development-basics

./: LICENSE  README.md  com.sh
launch/: task1.launch
src/: camera_node.cpp
task1_package/: CMakeLists.txt  package.xml
task1_package/src/: lidar_node.cpp  odom_node.cpp
task2_package/: CMakeLists.txt  calibration.sh  com.sh  package.xml
task3_package/: CMakeLists.txt  com.sh  package.xml
task3_package/src/: panel_node.cpp  scout_control_node.cpp  scout_state_node.cpp
task4_package/: CMakeLists.txt  com.sh  package.xml
task4_package/launch/: task4.launch  task4_01_mapping.launch  task4_02_save_map.launch  task4_03_nav_goal_assignment.launch  task4_04_amcl_localization.launch  task4_05_move_base_nav.launch  test.launch  test2.launch
task4_package/map/: nav.pgm  nav.yaml
task4_package/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
task4_package/src/: 01_letter_recognition_node.py  02_nav_goal_node.py  BaiduOCR.py
